--- a/client/question-paper/src/style/header.css
+++ b/client/question-paper/src/style/header.css
@@ -24,10 +24,16 @@
   font-weight: 600;
 }
 
+.header-logo {
+  position: relative; 
+  width: 5rem; 
+  height: auto; 
+}
+
 .header-logo img {
-  position: absolute;
-  width: 5rem;
-  height: 10%;
+  width: 100%; 
+  height: auto; 
+  display: block; 
 }
 
 .header ul {
