--- a/client/question-paper/src/style/login.css
+++ b/client/question-paper/src/style/login.css
@@ -16,7 +16,8 @@
     border-radius: 5px;
     margin-bottom: 40px;
     width: 15rem;
-    border: none;   
+    border: none; 
+    outline: none;  
 
 }
 
