--- a/client/question-paper/src/style/answereOptions.css
+++ b/client/question-paper/src/style/answereOptions.css
@@ -1,4 +1,4 @@
-
+/* 
 .answereOptions {
     background-color: #eeeeee;
     margin-top: 0rem;
@@ -26,4 +26,4 @@
     border: 1px solid rgb(39, 65, 64);
     margin-left: 2rem;
   }
-  
+   */
