--- a/client/question-paper/src/style/questionList.css
+++ b/client/question-paper/src/style/questionList.css
@@ -1,4 +1,4 @@
-.question-list {
+/* .question-list {
   background-color: rgb(209, 207, 207);
   text-align: center;
   padding-top: 2rem;
@@ -77,4 +77,4 @@ q li {
 
 .question-details-list span {
   color: blueviolet;
-}
+} */
