--- a/client/question-paper/src/style/true_false.css
+++ b/client/question-paper/src/style/true_false.css
@@ -1,4 +1,4 @@
-.true-false-answere {
+/* .true-false-answere {
   background-color: #eeeeee;
   margin-top: 0rem;
   margin: 32px;
@@ -45,4 +45,4 @@
 }
 .true-false-answere .true-false-category2  label {
   color: blueviolet;
-}
+} */
